Adocao de threads virtuais do Java 21