@@ -6,6 +6,7 @@ import com.wedocode.queuelab.core.DataSourceFactory;
 import com.wedocode.queuelab.core.QueueService;
 import com.wedocode.queuelab.core.QueueRepository;
 import com.wedocode.queuelab.worker.NotificationJobProcessor;
+import com.wedocode.queuelab.worker.QueueRepositoryWorkerAdapter;
 import com.wedocode.queuelab.worker.WorkerRuntime;
 import io.javalin.Javalin;
 import io.javalin.http.HttpStatus;
@@ -29,7 +30,7 @@ public final class ApiApplication {
 
     WorkerRuntime embeddedRuntime = null;
     if (config.startEmbeddedWorkers()) {
-      embeddedRuntime = new WorkerRuntime(dataSource, repository, config, new NotificationJobProcessor(config));
+      embeddedRuntime = new WorkerRuntime(dataSource, new QueueRepositoryWorkerAdapter(repository), config, new NotificationJobProcessor(config));
       embeddedRuntime.start();
     }
 
@@ -122,7 +123,7 @@ public final class ApiApplication {
       ctx.status(HttpStatus.INTERNAL_SERVER_ERROR).json(Map.of("message", exception.getMessage()));
     });
 
-    Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+    Runtime.getRuntime().addShutdownHook(Thread.ofPlatform().name("api-shutdown").unstarted(() -> {
       outboxRelay.stop();
       if (runtimeReference != null) {
         runtimeReference.stop();
